@@ -46,7 +46,7 @@ public class XmlUMOMessageTransformersTestCase extends AbstractTransformerTestCa
     public XmlUMOMessageTransformersTestCase() {
         Map props = new HashMap();
         props.put("object", new Apple());
-        props.put("number", Integer.valueOf(1));
+        props.put("number", new Integer(1));
         props.put("string", "hello");
         testObject = new MuleMessage("test", props);
     }
